Optimized code, added API 2